sonar-fixes: method invokes inefficient number constructor; use static valueOf instead
git-svn-id: https://community.knime.org/svn/nodes4knime/trunk/org.knime/org.knime.knip.core@5604 cd80d6f6-f959-11df-8f91-f7e70cbaf77b